default/objects/pq_Support_Matrix_Association__c/pq_Support_Matrix_Association__c.object-meta.xml
<CustomObject>
    <label>Support value for this matrix</label>
    <nameField>
        <displayFormat>pqSM-{0000}</displayFormat>
        <label>Support Matrix Association Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Support values for this matrix</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>