default/objects/pq_Support_Matrix_Association__c/fields/Influence_And_Support_Matrix__c.field-meta.xml
<CustomField>
    <fullName>Influence_And_Support_Matrix__c</fullName>
    <label>Influence And Support Matrix</label>
    <referenceTo>pq_Influence_And_Support_Matrix__c</referenceTo>
    <relationshipName>Support_Matrix_Associations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>