default/objects/pq_Support_Matrix_Association__c/fields/Support__c.field-meta.xml
<CustomField>
    <fullName>Support__c</fullName>
    <label>Support</label>
    <referenceTo>pq_Support__c</referenceTo>
    <relationshipName>Support_Matrix_Associations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>